# bearml

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  NOTES.md  README.md  debug.sh  run.sh  unit_tests.sh
bearml/: CMakeLists.txt  bearml.h
bearml/activation_functions/: activation_functions.h  convolution_layers.h  modules.h  pooling_layers.h
bearml/autograd/: README.md  autogradient.cpp  autogradient.h
bearml/cuda/: cuda_kernels.h
bearml/cuda/includes/: cuda_cas_traits.h  cuda_helper.h  cuda_imports.h  kernel_stubs.h
bearml/cuda/kernels/: accumulate.cu  accumulate.cuh  checks.cu  checks.cuh  compares.cu  compares.cuh  concat.cu  concat.cuh  element_wise_kernels.cu  element_wise_kernels.cuh  fill.cu  fill.cuh  linspace.cu  linspace.cuh  matmul.cu  matmul.cuh  padding.cu  padding.cuh  reductions.cu  reductions.cuh  softmax.cu  softmax.cuh  sum.cu  sum.cuh  transpose.cu  transpose.cuh  utils.cu  utils.cuh
bearml/dataloader/: dataloader.h
bearml/datasets/: datasets.h  utils.h
bearml/devices/: device_allocator.h  device_type.h
bearml/loss_functions/: loss.h
bearml/model_construct/: model_construct.h
bearml/operators/: ops.h
bearml/optimizers/: optimizers.h
bearml/tensor/: LazyTensor.cpp  LazyTensor.h  StaticTensor.h  Tensor.h  WrapperTensor.h
bearml/tensor/reductions/: reduction_ops.h
bearml/tensor/utils/: compare_ops.h  debug_utils.h  device_utils.cpp  device_utils.h  linalg_utils.cpp  linalg_utils.h  linalg_utils.tpp  ordering.h  shape_utils.cpp  shape_utils.h  slice.cpp  slice.h
bearml/xla/: hlobuilder.h
cuda_kernels/: test.cu
misc/matrix/: Matrix.cpp  Matrix.h
runchecks/: CMakeLists.txt  testingDriver.cpp
simplenet/: CMakeLists.txt  simplenet.h
simplenet/activation_functions/: activation_functions.cpp  activation_functions.h  convolution_layers.h  modules.h  polling_layers.h
simplenet/autograd/: autogradient.cpp  autogradient.h
simplenet/cuda/: cuda_kernels.h
simplenet/cuda/includes/: cuda_cas_traits.h  cuda_consts.h  cuda_helper.h  cuda_imports.h  cuda_structs.h  helper.h  kernel_links.h  kernel_stubs.h  ops.h
simplenet/cuda/kernels/: accumulate.cu  accumulate.cuh  checks.cu  checks.cuh  compares.cu  compares.cuh  concat.cu  concat.cuh  element_wise_kernels.cu  element_wise_kernels.cuh  fill.cu  fill.cuh  linspace.cu  linspace.cuh  matmul.cu  matmul.cuh  padding.cu  padding.cuh  reductions.cu  reductions.cuh  softmax.cu  softmax.cuh  sum.cu  sum.cuh  transpose.cu  transpose.cuh  utils.cu  utils.cuh
simplenet/dataloader/: dataloader.h
simplenet/datasets/: datasets.h  utils.h
simplenet/devices/: device_allocator.h  device_type.h
simplenet/loss_functions/: loss.h
simplenet/model_construct/: model_construct.h
simplenet/operators/: ops.h  padding_ops.h
simplenet/optimizers/: optimizers.cpp  optimizers.h
simplenet/tensor/: Tensor.cpp  Tensor.h
simplenet/tensor/reductions/: reduction_ops.h
simplenet/tensor/utils/: compare_ops.h  debug_utils.h  device_utils.cpp  device_utils.h  linalg_utils.cpp  linalg_utils.h  linalg_utils.tpp  ordering.h  shape_utils.cpp  shape_utils.h  slice.cpp  slice.h
src/: CMakeLists.txt  Matrix.cpp  Matrix.h  Tensor.cpp  Tensor.h  activation_functions.cpp  autogradient.cpp  autogradient.h  simplenet.h  testingDriver.cpp
src/activation_functions/: activation_functions.h  activations_function.h  modules.h
src/autograd/: autogradient.cpp  autogradient.h
src/cuda/includes/: helper.h
src/cuda/kernels/: element_wise_kernels.cu  fill.cu  matmul.cu
src/cuda_kernels/: add.cu  cuda_kernels.cpp  cuda_kernels.h  fill.cu  matmul.cu
src/devices/: device_allocator.h  device_type.h
src/loss_functions/: loss.h
src/model_construct/: model_construct.h
src/operations/: op.h
src/optimizers/: optimizers.cpp  optimizers.h  sgd.h
src/tensor/: Tensor.cpp  Tensor.h
src/tensor/utils/: debug_utils.h  device_utils.cpp  device_utils.h  linalg_utils.cpp  linalg_utils.h  shape_utils.h
tests/: CMakeLists.txt  testingDriver.cpp
unit_tests/: CMakeLists.txt  unit_tests.cpp
